# linux

./: 8188eu.ko  Makefile.md  cpp.md  gcc.md  io_test  leetcode.md  linux常用命令.md  openfile  test  test.c  test.txt  test1.txt  数据结构.md  面试指南.md  项目推荐.md
0.C语言/ex1/: Makefile
0.C语言/ex13/: ex13
0.C语言/ex14/: ex14_1  ex14_1.c
0.C语言/ex15/: ex15_1  ex15_1.c
0.C语言/ex33/: Mergesort  Mergesort.c
0.C语言/ex42/: stack_1
0.C语言/ex44/: rb  rb.c
0.C语言/ex5/: ex5
0.C语言/冒泡与归并排序/: Bubblesort
0.C语言/栈与队列/: stack
1.工具/: gdb.md  perf.md  pstack.md  strace.md  valgrind.md
11.cJSON库/: cJSON.md
2.文件IO/: README.md  文件IO.md
3.进程/: Makefile  shm_read.c  shm_write.c
3.进程/1.进程处理/: process.txt  process_test.c  创建、复制.md
3.进程/2.进程通信/: mkfifo_read.c  mkfifo_write.c  mq_receive.c  mq_send.c  pipe_test.c  shm_write.c  进程通信.md
3.进程/3.信号处理/: 信号处理.md
3.进程/4.守护进程/: daemon.c  server.c  守护进程.md
4.线程/: 线程池.md
4.线程/1.线程处理/: pthread_test.c  线程处理.md
4.线程/2.线程同步/: 互斥锁.md  信号量.md  条件变量.md  自旋锁.md  读写锁.md
5.Socket编程/: Makefile  client  client.c  serve  serve.c  socket.md
5.Socket编程/Socket_IPC/: socket_ipc.md
5.Socket编程/TCP/: Makefile  TCP.md  client_process.c  client_thread.c  serve_process.c  serve_thread.c
5.Socket编程/UDP/: Makefile  UDP.md  client  client.c  serve  serve.c
6.系统、网络与八股/: 八股.docx  必读信息.txt  简历.doc
7.Framebuffer应用编程/: Framebuffer.md
7.驱动基础/: 0.驱动基础.md  1.杂项设备驱动.md  2.字符设备驱动.md  3.平台总线模型.md  4.设备树.md  5.pinctrl子系统.md  6.GPIO子系统.md  7.IIC子系统.md  itq.cpp
7.驱动基础/0.蜂鸣器实验/: ai解析.md  beep.c  test.c
7.驱动基础/蜂鸣器实验/: ai解析.md  beep.c  test.c
8.第三方库/IO多路复用/: TCP_epoll_test.c  epoll多路复用.md
8.第三方库/MQTT通信/: MQTT.md
8.第三方库/log日志库/: log日志库.md
8.第三方库/串口配置/: 串口配置.md
9.系统、网络与八股/: 绘图1.vsdx
9.通信接口/IIC/: IIC外设.md
9.通信接口/SPI/: SPI外设.md
9.通信接口/UART/: UART外设.md
C/ex1/: ex1
C/ex13/: ex13_1
C/ex14/: test
C/ex33/: Bubblesort  mergesort.c
C/ex42/: queue  queue.c
C/liblcthw/: ex32
C语言/ex1/: ex1.c
C语言/ex13/: ex13_1.c
C语言/ex14/: test.c
C语言/ex33/: Bubblesort.c  bubblesort.c  mergesort
C语言/ex4/: ex4  ex4.c
C语言/ex42/: stack.c  stack_1.c
C语言/ex8/: ex8  ex8.c
C语言/liblcthw/: ex32.c
Tool/: gcc.md
dds_ros2/: CMakeLists.txt  HelloWorldData_.cpp  HelloWorldData_.hpp  HelloWorldData_.idl  README.md  publisher.cpp  subscriber.cpp
dds_ros2/airs_ros2/: setup.sh
dds_ros2/airs_ros2/cyclonedds_ws/src/: cyclonedds.xml
dds_ros2/airs_ros2/cyclonedds_ws/src/airs/: CMakeLists.txt  README.md  package.xml
dds_ros2/airs_ros2/cyclonedds_ws/src/airs/msg/: Test.msg
gateway/: .gitignore  IoT智能网关代码审查报告.docx  IoT智能网关项目计划书.docx  Makefile  Makefile.0  Makefile.1  README.md  README2.0.md  count.md  gateway  gateway.ini  gateway.md  main.c  messages.db  迭代计划.md
gateway/app/: app_bluetooth.c  app_device.c  app_message.c  app_runner.c  app_serial.c  app_task.c  app_task.h
gateway/config/: protocols.ini  transport.ini  transport_physical.ini
gateway/daemon/: daemon_process.c  daemon_process.h  daemon_runner.c
gateway/idl/: GatewayData.h  GatewayData.idl
gateway/include/: app_bluetooth.h  app_buffer.h  app_config.h  app_dds.h  (+18 more)
ioFile/: io_test.c
sched-monitor-master/: .gitignore  CMakeLists.txt  Linux内核性能监控平台-项目设计书.docx  Makefile  README.md
sched-monitor-master/include/: sched_monitor.h
sched-monitor-master/kernel/: Kbuild  Makefile  async_worker.c  config.c  kernel_internal.h  kunit_test.c  main.c  netlink_comm.c  ring_buffer.c  stats.c  trace_hook.c
sched-monitor-master/scripts/: test.sh
sched-monitor-master/user/common/: netlink_client.c  stats_processor.c  user_common.h
sched-monitor-master/user/monitord/: monitord.c
sched-monitor-master/user/schedtop/: schedtop.c
嵌入式校招-八股文圣经/: 02_C++基础面试题.md  05_操作系统原理.md  05_操作系统原理面试题.md
工具/: linux常用命令.md  vim.md
文件IO/: Makefile  io.txt  openfile.c  文件IO.md
车库/: 1.c  Audio.c  RFID.c  SQLite.c  Video.c  camera.c  main.c
进程/: Makefile  process_test  进程处理函数.md
(+40 files in other folders)
